# Copyright 2025 DeepMind Technologies Limited..
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Utilities

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "bundle",
    hdrs = ["bundle.h"],
    deps = ["//envlogger/platform/default:bundle"],
)

cc_library(
    name = "filesystem",
    hdrs = ["filesystem.h"],
    deps = [
        ":status_macros",
        "//envlogger/platform/default:filesystem",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "parse_text_proto",
    hdrs = ["parse_text_proto.h"],
    deps = ["//envlogger/platform/default:parse_text_proto"],
)

cc_library(
    name = "proto_testutil",
    testonly = 1,
    hdrs = ["proto_testutil.h"],
    deps = ["//envlogger/platform/default:proto_testutil"],
)

cc_library(
    name = "riegeli_file_reader",
    hdrs = ["riegeli_file_reader.h"],
    deps = ["//envlogger/platform/default:riegeli_file_reader"],
)

cc_library(
    name = "riegeli_file_writer",
    hdrs = ["riegeli_file_writer.h"],
    deps = ["//envlogger/platform/default:riegeli_file_writer"],
)

cc_library(
    name = "status_macros",
    hdrs = ["status_macros.h"],
    deps = ["//envlogger/platform/default:status_macros"],
)

cc_library(
    name = "test_macros",
    testonly = 1,
    hdrs = ["test_macros.h"],
    deps = [
        ":status_macros",
        "@com_google_googletest//:gtest",
    ],
)
