# Copyright 2024 DeepMind Technologies Limited..
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Tests for reading/writing from different languages.

load("@rules_python//python:defs.bzl", "py_binary", "py_test")

cc_binary(
    name = "cc_reader",
    testonly = 1,
    srcs = ["cc_reader.cc"],
    deps = [
        "//envlogger/backends/cc:riegeli_dataset_reader",
        "//envlogger/converters:xtensor_codec",
        "//envlogger/platform:proto_testutil",
        "//envlogger/proto:storage_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_googletest//:gtest",
        "@gmp",
        "@xtensor",
    ],
)

py_binary(
    name = "py_writer",
    srcs = ["py_writer.py"],
    deps = [
        "//envlogger",
    ],
)

py_test(
    name = "cross_language_test",
    srcs = ["cross_language_test.py"],
    data = [
        ":cc_reader",
        ":py_writer",
    ],
    deps = [
        "@rules_python//python/runfiles",
    ],
)
